--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -50,4 +50,4 @@ navbar:
     href: news/index.html
   publications:
     text: Publications
-    href: articles/publications.html
+    href: articles/NMsim-publications.html
