--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -11,8 +11,8 @@ navbar:
     - home
     - articles
     - reference
+    - pub
     - news
-    - publications
     - github
   components:
    home:
@@ -45,9 +45,9 @@ navbar:
         href: articles/NMsim-ReuseSimSubjects.html
       - text: Debugging, Speed, and Disk Space
         href: articles/NMsim-speed.html
+  pub:
+    text: Publications
+    href: articles/NMsim-publications.html
   news:
     text: News
     href: news/index.html
-  publications:
-    text: Publications
-    href: articles/NMsim-publications.html
