--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,7 @@ Suggests:
 Encoding: UTF-8
 LazyData: true
 Additional_repositories: https://mpn.metworx.com/snapshots/stable/2024-09-23
-BugReports: https://github.com/philipdelff/NMsim/issues
+BugReports: https://github.com/NMautoverse/NMsim/issues
 Language: en-US
-URL: https://philipdelff.github.io/NMsim/
+URL: https://NMautoverse.github.io/NMsim/
 
