expandCovs support for character labels on values

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,7 @@ export(NMsim_typical)
 export(add)
 export(addEVID2)
 export(addResVar)
-export(expandCovLists)
+export(expandCovs)
 export(genPhiFile)
 export(inputArchiveDefault)
 export(is.NMsimModTab)
