--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -52,7 +52,7 @@ LINK.LNK
 ^inst/examples/nonmem/.*\.dir.+
 ^inst/examples/nonmem/.*\.xml
 ^inst/examples/nonmem/.*\.msf
-^inst/examples/simulations/.+
+^inst/examples/simulations
 ^inst/examples/R/NMexec_run_estimates.R
 ;; so far, there is nothing of real value here
 ^inst/examples/R/*
