--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -54,6 +54,7 @@ LINK.LNK
 ^inst/examples/nonmem/.*\.msf
 ^inst/examples/simulations
 ^inst/examples/R/NMexec_run_estimates.R
+^publications
 ;; so far, there is nothing of real value here
 ^inst/examples/R/*
 ^vignettes$
