--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ import(utils)
 importFrom(MASS,mvrnorm)
 importFrom(R.utils,getAbsolutePath)
 importFrom(fst,read_fst)
+importFrom(stats,as.formula)
 importFrom(stats,quantile)
 importFrom(stats,runif)
 importFrom(utils,packageVersion)
