--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -39,6 +39,7 @@ input.grd
 input.shk
 INTER
 LINK.LNK
+^man/auxiliary
 ^inst/examples/data/xgxt021_bs.+
 ^inst/examples/nonmem/NMdata_backup/
 ^inst/examples/nonmem/NMexec.pnm
