--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,8 @@ Suggests:
   patchwork,
   tracee,
   tidyvpc,
-  simpar
+  simpar,
+  kableExtra
 Encoding: UTF-8
 Additional_repositories: https://mpn.metworx.com/snapshots/stable/2024-09-23
 BugReports: https://github.com/NMautoverse/NMsim/issues
