--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(overwrite)
 export(readParsWide)
 export(sampleParsSimpar)
 export(simPopEtas)
+export(summarizeCovvar)
 export(unNMsimModTab)
 export(unNMsimRes)
 import(MASS)
