--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Suggests:
   tracee,
   tidyvpc,
   simpar,
-  kableExtra
+  kableExtra,
+  coveffectsplot
 Encoding: UTF-8
 Additional_repositories: https://mpn.metworx.com/snapshots/stable/2024-09-23
 BugReports: https://github.com/NMautoverse/NMsim/issues
