--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Suggests:
   tidyvpc,
   simpar,
   kableExtra,
-  coveffectsplot
+  coveffectsplot,
+  NMcalc
 Encoding: UTF-8
 Additional_repositories: https://mpn.metworx.com/snapshots/stable/2024-09-23
 BugReports: https://github.com/NMautoverse/NMsim/issues
