--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,7 +34,6 @@ export(overwrite)
 export(readParsWide)
 export(sampleParsSimpar)
 export(simPopEtas)
-export(summarizeCovvar)
 export(unNMsimModTab)
 export(unNMsimRes)
 import(MASS)
@@ -46,7 +45,10 @@ importFrom(MASS,mvrnorm)
 importFrom(R.utils,getAbsolutePath)
 importFrom(fst,read_fst)
 importFrom(stats,as.formula)
+importFrom(stats,median)
 importFrom(stats,quantile)
+importFrom(stats,reorder)
 importFrom(stats,runif)
+importFrom(stats,setNames)
 importFrom(utils,packageVersion)
 importFrom(xfun,relative_path)
