--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,7 +34,7 @@ export(overwrite)
 export(readParsWide)
 export(sampleParsSimpar)
 export(simPopEtas)
-export(summarizeCovvar)
+export(summarizeCovs)
 export(unNMsimModTab)
 export(unNMsimRes)
 import(MASS)
