--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,5 +51,6 @@ importFrom(stats,quantile)
 importFrom(stats,reorder)
 importFrom(stats,runif)
 importFrom(stats,setNames)
+importFrom(utils,modifyList)
 importFrom(utils,packageVersion)
 importFrom(xfun,relative_path)
