--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(NMsim_asis)
 export(NMsim_default)
 export(NMsim_known)
 export(NMsim_typical)
+export(NMupdateSizes)
 export(add)
 export(addEVID2)
 export(addResVar)
