--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -29,7 +29,9 @@ jobs:
       R_KEEP_PKG_SOURCE: yes
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+
+      - uses: metrumresearchgroup/actions/mpn-latest@v1
 
       - uses: r-lib/actions/setup-pandoc@v2
 
@@ -42,9 +44,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::covr, any::xml2, any::simpar rcmdcheck
-          needs: coverage
-
+          extra-packages: any::simpar rcmdcheck
 
 
       - uses: r-lib/actions/check-r-package@v2
