--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(NMsim_default)
 export(NMsim_known)
 export(NMsim_typical)
 export(NMupdateSizes)
+export(NMwriteInits)
 export(add)
 export(addEVID2)
 export(addResVar)
