--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -65,6 +65,6 @@ LINK.LNK
 ^R/NMwritePreamble.R
 ^tests_manual
 ^tests/testthat/simulations
-^tests/testthat/testOutput
+^tests/testthat/testOutput/*
 ^tests/testthat/testOutput/.*fst
 ^tests/testthat/testData/nonmem/NMsim/xgxr032_tabopts5
