--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ S3method(t,NMsimRes)
 export(NMcreateDoses)
 export(NMexec)
 export(NMreadSim)
+export(NMsample)
 export(NMsim)
 export(NMsimTestConf)
 export(NMsim_EBE)
@@ -24,7 +25,6 @@ export(NMsim_known)
 export(NMsim_typical)
 export(NMupdateSizes)
 export(add)
-export(addEVID2)
 export(addResVar)
 export(expandCovs)
 export(genPhiFile)
