--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(NMsim_known)
 export(NMsim_typical)
 export(NMupdateSizes)
 export(add)
+export(addEVID2)
 export(addResVar)
 export(expandCovs)
 export(genPhiFile)
