multiple minor updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,10 +10,10 @@ S3method(rbind,NMsimModTab)
 S3method(rbind,NMsimRes)
 S3method(t,NMsimModTab)
 S3method(t,NMsimRes)
+export(NMaddSamples)
 export(NMcreateDoses)
 export(NMexec)
 export(NMreadSim)
-export(NMsample)
 export(NMsim)
 export(NMsimTestConf)
 export(NMsim_EBE)
