--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,12 +28,15 @@ export(add)
 export(addEVID2)
 export(addResVar)
 export(expandCovs)
+export(forestDefineCovs)
+export(forestSummarize)
 export(genPhiFile)
 export(inputArchiveDefault)
 export(is.NMsimModTab)
 export(is.NMsimRes)
 export(overwrite)
 export(readParsWide)
+export(samplePars)
 export(sampleParsSimpar)
 export(simPopEtas)
 export(summarizeCovs)
