--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -36,7 +36,7 @@ navbar:
         href: articles/NMsim-ParamUncertain.html
       - text: Simulation-based forest plots with NMsim
         href: articles/NMsim-forest.html
-      - text: Creation of Simulation Data Sets
+      - text: Data Set Creation with NMsim
         href: articles/NMsim-DataCreate.html
       - text: Simulation with Residual Variability
         href: articles/NMsim-ResidVar.html
